--- a/services/dotnet-producer-weather/src/WeatherRadar.Producer/WeatherRadar.Producer.csproj
+++ b/services/dotnet-producer-weather/src/WeatherRadar.Producer/WeatherRadar.Producer.csproj
@@ -7,4 +7,23 @@
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\WeatherRadar.Domain\WeatherRadar.Domain.csproj" />
+		<ProjectReference Include="..\WeatherRadar.Infra\WeatherRadar.Infra.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.2" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.2" />
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.2" />
+	  <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.2" />
+	  <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.2" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Update="appsettings.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+
 </Project>
