(feat): Dynamodb idempotency config

--- a/services/dotnet-producer-weather/src/WeatherRadar.Producer/appsettings.json
+++ b/services/dotnet-producer-weather/src/WeatherRadar.Producer/appsettings.json
@@ -9,5 +9,10 @@
     "Kafka": {
         "Server": "localhost:9092",
         "TopicName": "weather-data"
+    },
+    "DynamoDb": {
+        "ServiceUrl": "http://localhost:8000",
+        "AccessKey": "dummy",
+        "SecretKey": "dummy"
     }
 }
