--- a/services/dotnet-producer-weather/src/WeatherRadar.Application/WeatherRadar.Application.csproj
+++ b/services/dotnet-producer-weather/src/WeatherRadar.Application/WeatherRadar.Application.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Idempotency\" />
+      <ProjectReference Include="..\WeatherRadar.Domain\WeatherRadar.Domain.csproj" />
     </ItemGroup>
 
 </Project>
