--- a/services/dotnet-producer-weather/src/WeatherRadar.Infra/WeatherRadar.Infra.csproj
+++ b/services/dotnet-producer-weather/src/WeatherRadar.Infra/WeatherRadar.Infra.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.405.24" />
+      <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.400" />
       <PackageReference Include="Bogus" Version="35.6.1" />
       <PackageReference Include="Confluent.Kafka" Version="2.8.0" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.2" />
