(feat): MongoDB integration to save date

--- a/services/dotnet-producer-weather/src/WeatherRadar.Producer/appsettings.json
+++ b/services/dotnet-producer-weather/src/WeatherRadar.Producer/appsettings.json
@@ -14,5 +14,8 @@
         "ServiceUrl": "http://localhost:8000",
         "AccessKey": "dummy",
         "SecretKey": "dummy"
+    },
+    "ConnectionStrings": {
+        "MongoDB" : "mongodb://localhost:27017/weatherradar\n"
     }
 }
