--- a/services/dotnet-producer-weather/src/WeatherRadar.Infra/WeatherRadar.Infra.csproj
+++ b/services/dotnet-producer-weather/src/WeatherRadar.Infra/WeatherRadar.Infra.csproj
@@ -12,6 +12,7 @@
       <PackageReference Include="Bogus" Version="35.6.1" />
       <PackageReference Include="Confluent.Kafka" Version="2.8.0" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.2" />
+      <PackageReference Include="MongoDB.Driver" Version="3.2.0" />
     </ItemGroup>
 
     <ItemGroup>
