(java): idempotency setup

--- a/services/dotnet-producer-weather/src/WeatherRadar.Producer/appsettings.json
+++ b/services/dotnet-producer-weather/src/WeatherRadar.Producer/appsettings.json
@@ -16,6 +16,6 @@
         "SecretKey": "dummy"
     },
     "ConnectionStrings": {
-        "MongoDB" : "mongodb://localhost:27017/weatherradar\n"
+        "MongoDB" : "mongodb://localhost:27017/weatherradar"
     }
 }
