--- a/services/java-weather-validator/src/main/resources/application.properties
+++ b/services/java-weather-validator/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.kafka.consumer.group-id=weather-validation-group
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.datasource.url=jdbc:postgresql://localhost:5432/weather-data
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
