--- a/services/java-weather-validator/src/main/resources/application.properties
+++ b/services/java-weather-validator/src/main/resources/application.properties
@@ -6,5 +6,17 @@ spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.S
 spring.datasource.url=jdbc:postgresql://localhost:5432/weather-data
 spring.datasource.username=postgres
 spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.kafka.bootstrap-servers=localhost:9092
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.schemas=public
+spring.jpa.show-sql=true
+kafka.topics.weather-data=weather-data
+kafka.consumer.group-id=weather-validation-group
+kafka.consumer.auto-offset-reset=earliest
+kafka.consumer.max-poll-records=500
+kafka.consumer.concurrency=3
